--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3//dist/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css">-->
     
     <script>require("../dist/index.js");</script>
     <link rel="stylesheet" href="style.css">
@@ -19,14 +23,14 @@
 <body>
     <div id="views">
         <div class="view active-view" id="create-project">
-            <div>
-                <div class="form-part">
-                    <label for="create-project-name">Pack Name</label>
-                    <input type="text" id="create-project-name">
+            <div class="container">
+                <div class="m-3">
+                    <label for="create-project-name" class="form-label">Pack Name</label>
+                    <input type="text" class="form-control" id="create-project-name">
                 </div>
-                <div class="form-part">
-                    <label for="create-project-version">Pack Format</label>
-                    <select id="create-project-version">
+                <div class="m-3">
+                    <label for="create-project-version" class="form-label">Pack Format</label>
+                    <select id="create-project-version" class="form-select">
                         <option selected value="6">6 (1.16.2-1.16.5)</option>
                         <option value="5">5 (1.15-1.16.1)</option>
                         <option value="4">4 (1.13-1.14.4)</option>
@@ -35,12 +39,16 @@
                         <option value="1">1 (1.6.1-1.8.9)</option>
                     </select>
                 </div>
-                <div class="form-part">
-                    <label for="create-project-location">Location</label>
-                    <input type="text" id="create-project-location">
-                    <button id="create-project-location-change">Change</button>
-                    <br>
-                    <span>A new folder will be created inside this folder</span>
+                <div class="m-3">
+                    <label for="create-project-location" class="form-label">Location</label>
+                    <div class="input-group">
+                        <input type="text" id="create-project-location" class="form-control">
+                        <button id="create-project-location-change" class="btn btn-secondary">Change</button>
+                    </div>
+                    <span class="form-text">A new folder will be created inside this folder.</span>
+                </div>
+                <div class="m-3">
+                    <button class="btn btn-primary">Create</button>
                 </div>
             </div>
         </div>
