--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3//dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="lib/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <!--<link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css">-->
-    
+
     <script>require("../dist/index.js");</script>
     <link rel="stylesheet" href="style.css">
     <style id="theme"></style>
@@ -22,7 +23,28 @@
 
 <body>
     <div id="views">
-        <div class="view active-view" id="create-project">
+        <div class="view active-view" id="welcome">
+            <div class="container">
+                <div class="card bg-secondary">
+                    <div class="card-header">Welcome</div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col">
+                                <h2>New Project</h2>
+                                <button class="btn btn-primary" id="create-new-project-button">Create New
+                                    Project</button>
+                                <button class="btn btn-primary" id="open-new-project-button">Open Project</button>
+                            </div>
+                            <div class="col">
+                                <h2>Recent projects:</h2>
+                                <ul id="recentProjects"></ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="view" id="create-project">
             <div class="container">
                 <div class="m-3">
                     <label for="create-project-name" class="form-label">Pack Name</label>
@@ -30,14 +52,7 @@
                 </div>
                 <div class="m-3">
                     <label for="create-project-version" class="form-label">Pack Format</label>
-                    <select id="create-project-version" class="form-select">
-                        <option selected value="6">6 (1.16.2-1.16.5)</option>
-                        <option value="5">5 (1.15-1.16.1)</option>
-                        <option value="4">4 (1.13-1.14.4)</option>
-                        <option value="3">3 (1.11-1.12.2)</option>
-                        <option value="2">2 (1.9-1.10.2)</option>
-                        <option value="1">1 (1.6.1-1.8.9)</option>
-                    </select>
+                    <select id="create-project-version" class="form-select"></select>
                 </div>
                 <div class="m-3">
                     <label for="create-project-location" class="form-label">Location</label>
@@ -65,6 +80,8 @@
             </div>
         </div>
     </div>
+    <div id="modals"></div>
+    <div id="processesContainer"></div>
 </body>
 
 </html>
